--- a/index.html
+++ b/index.html
@@ -57,52 +57,76 @@
         <hr class="line" />
         <div class="div-services">
           <div class="div-service">
-            <img src="img/icon1.png" alt="png" class="services-card-image" />
-            <p class="services-card-heading">PHOTOGRAPHY</p>
-            <p class="services-card-text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor.
-            </p>
+            <div class="div-img">
+              <img src="img/icon1.png" alt="png" class="services-card-image" />
+            </div>
+            <div class="div-p">
+              <p class="services-card-heading">PHOTOGRAPHY</p>
+              <p class="services-card-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor.
+              </p>
+            </div>
           </div>
           <div class="div-service">
-            <img src="img/icon2.png" alt="png" class="services-card-image" />
-            <p class="services-card-heading">PHOTOGRAPHY</p>
-            <p class="services-card-text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor.
-            </p>
+            <div class="div-img">
+              <img src="img/icon2.png" alt="png" class="services-card-image" />
+            </div>
+            <div class="div-p">
+              <p class="services-card-heading">PHOTOGRAPHY</p>
+              <p class="services-card-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor.
+              </p>
+            </div>
           </div>
           <div class="div-service">
-            <img src="img/icon3.png" alt="png" class="services-card-image" />
-            <p class="services-card-heading">PHOTOGRAPHY</p>
-            <p class="services-card-text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor.
-            </p>
+            <div class="div-img">
+              <img src="img/icon3.png" alt="png" class="services-card-image" />
+            </div>
+            <div class="div-p">
+              <p class="services-card-heading">PHOTOGRAPHY</p>
+              <p class="services-card-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor.
+              </p>
+            </div>
           </div>
           <div class="div-service">
-            <img src="img/icon4.png" alt="png" class="services-card-image" />
-            <p class="services-card-heading">PHOTOGRAPHY</p>
-            <p class="services-card-text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor.
-            </p>
+            <div class="div-img">
+              <img src="img/icon4.png" alt="png" class="services-card-image" />
+            </div>
+            <div class="div-p">
+              <p class="services-card-heading">PHOTOGRAPHY</p>
+              <p class="services-card-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor.
+              </p>
+            </div>
           </div>
           <div class="div-service">
-            <img src="img/icon5.png" alt="png" class="services-card-image" />
-            <p class="services-card-heading">PHOTOGRAPHY</p>
-            <p class="services-card-text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor.
-            </p>
+            <div class="div-img">
+              <img src="img/icon5.png" alt="png" class="services-card-image" />
+            </div>
+            <div class="div-p">
+              <p class="services-card-heading">PHOTOGRAPHY</p>
+              <p class="services-card-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor.
+              </p>
+            </div>
           </div>
           <div class="div-service">
-            <img src="img/icon6.png" alt="png" class="services-card-image" />
-            <p class="services-card-heading">PHOTOGRAPHY</p>
-            <p class="services-card-text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor.
-            </p>
+            <div class="div-img">
+              <img src="img/icon6.png" alt="png" class="services-card-image" />
+            </div>
+            <div class="div-p">
+              <p class="services-card-heading">PHOTOGRAPHY</p>
+              <p class="services-card-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor.
+              </p>
+            </div>
           </div>
         </div>
       </section>
